--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,7 @@
-html {
-  height: 100%;
-}
-
 body {
   font-family: sans-serif;
   padding: 0 10px;
   border: 1px solid transparent;
-  height: 100%;
   background: black;
   margin: 0;
 }
